src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>rC_Event__Registered_Venue_Seats__c</fullName>
        <description>The specific seats that this campaign member has reserved.</description>
        <inlineHelpText>The specific seats that this campaign member has reserved.</inlineHelpText>
        <label>Registered Venue Seats</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Registered_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated, look up to the Venue this Campaign Member is registered for.</description>
        <inlineHelpText>Look up to the Venue this Campaign Member is registered for.</inlineHelpText>
        <label>Registered Venue</label>
        <referenceTo>rC_Event__Campaign_Venue__c</referenceTo>
        <relationshipLabel>Campaign Members (Registered Venue)</relationshipLabel>
        <relationshipName>Campaign_Members_Registered_Venue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Event__Rollup_Tickets__c</fullName>
        <description>Auto populated, displays the most recent Campaign Tickets last modified date.</description>
        <inlineHelpText>Displays the most recent Campaign Tickets last modified date.</inlineHelpText>
        <label>Rollup Tickets</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Event__Salutation__c</fullName>
        <description>Salutation of lead or contact</description>
        <inlineHelpText>Salutation of lead or contact</inlineHelpText>
        <label>Salutation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_City__c</fullName>
        <description>Auto populated, Indicates the Shipping City related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping City related to this Campaign Member.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Country__c</fullName>
        <description>Auto populated, Indicates the Shipping Country related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping Country related to this Campaign Member.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Postal_Code__c</fullName>
        <description>Auto populated, Indicates the Shipping Postal Code related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping Postal Code related to this Campaign Member.</inlineHelpText>
        <label>Shipping Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_State__c</fullName>
        <description>Auto populated, Indicates the Shipping State/Province related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping State/Province related to this Campaign Member.</inlineHelpText>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Street_Line_1__c</fullName>
        <description>Auto populated, Indicates the Shipping Street related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping Street related to this Campaign Member.</inlineHelpText>
        <label>Shipping Street Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Street_Line_2__c</fullName>
        <description>Auto populated, Indicates the Shipping Street related to this Campaign Member.</description>
        <inlineHelpText>Indicates the Shipping Street related to this Campaign Member.</inlineHelpText>
        <label>Shipping Street Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Shipping_Street__c</fullName>
        <formula>TRIM(IF(AND(ISBLANK(rC_Event__Shipping_Street_Line_1__c), ISBLANK(rC_Event__Shipping_Street_Line_2__c)), &apos;&apos;, IF(AND(ISBLANK(rC_Event__Shipping_Street_Line_1__c)), rC_Event__Shipping_Street_Line_2__c, rC_Event__Shipping_Street_Line_1__c + &apos;, &apos; + rC_Event__Shipping_Street_Line_2__c)))</formula>
        <label>Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Discount_Code__c</fullName>
        <description>Discount code applied to Ticket 1.</description>
        <inlineHelpText>Discount code applied to Ticket 1.</inlineHelpText>
        <label>Ticket 1: Discount Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of tickets of Type 1 purchased.</description>
        <inlineHelpText>Price of tickets of Type 1 purchased.</inlineHelpText>
        <label>Ticket 1: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of tickets of Type 1 purchased.</description>
        <inlineHelpText>Number of tickets of Type 1 purchased.</inlineHelpText>
        <label>Ticket 1: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Status__c</fullName>
        <description>Auto populated, indicates the Status of tickets of Type 1 purchased.</description>
        <inlineHelpText>Status of tickets of Type 1 purchased.</inlineHelpText>
        <label>Ticket 1: Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Ticket_ID__c</fullName>
        <description>Auto populated, indicates the ID of ticket Type 1 purchased.</description>
        <inlineHelpText>ID of ticket Type 1 purchased.</inlineHelpText>
        <label>Ticket 1: Ticket ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_1_Ticket_Name__c</fullName>
        <description>Indicates name of tickets of Type 1 purchased.</description>
        <inlineHelpText>Name of ticket 1</inlineHelpText>
        <label>Ticket 1: Ticket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Discount_Code__c</fullName>
        <description>Discount code applied to Ticket 2.</description>
        <inlineHelpText>Discount code applied to Ticket 2.</inlineHelpText>
        <label>Ticket 2: Discount Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of tickets of Type 2 purchased.</description>
        <inlineHelpText>Price of tickets of Type 2 purchased.</inlineHelpText>
        <label>Ticket 2: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of tickets of Type 2 purchased.</description>
        <inlineHelpText>Number of tickets of Type 2 purchased.</inlineHelpText>
        <label>Ticket 2: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Status__c</fullName>
        <description>Auto populated, indicates the Status of tickets of Type 2 purchased.</description>
        <inlineHelpText>Status of tickets of Type 2 purchased.</inlineHelpText>
        <label>Ticket 2: Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Ticket_ID__c</fullName>
        <description>Auto populated, indicates the ID of ticket Type 2 purchased.</description>
        <inlineHelpText>ID of ticket Type 2 purchased.</inlineHelpText>
        <label>Ticket 2: Ticket ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_2_Ticket_Name__c</fullName>
        <description>Indicates name of tickets of Type2 purchased.</description>
        <inlineHelpText>Name of ticket 2</inlineHelpText>
        <label>Ticket 2: Ticket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Discount_Code__c</fullName>
        <description>Discount code applied to Ticket 3.</description>
        <inlineHelpText>Discount code applied to Ticket 3.</inlineHelpText>
        <label>Ticket 3: Discount Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Purchase_Price__c</fullName>
        <description>Auto populated, indicates the price of tickets of Type 3 purchased.</description>
        <inlineHelpText>Price of tickets of Type 3 purchased.</inlineHelpText>
        <label>Ticket 3: Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Purchase_Quantity__c</fullName>
        <description>Auto populated, indicates the number of tickets of Type 3 purchased.</description>
        <inlineHelpText>Number of tickets of Type 3 purchased.</inlineHelpText>
        <label>Ticket 3: Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Status__c</fullName>
        <description>Auto populated, indicates the Status of tickets of Type 3 purchased.</description>
        <inlineHelpText>Status of tickets of Type 3 purchased.</inlineHelpText>
        <label>Ticket 3: Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Ticket_ID__c</fullName>
        <description>Auto populated, indicates the ID of ticket Type 3 purchased.</description>
        <inlineHelpText>ID of ticket Type 3 purchased.</inlineHelpText>
        <label>Ticket 3: Ticket ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_3_Ticket_Name__c</fullName>
        <description>Indicates name of tickets of Type 3 purchased.</description>
        <inlineHelpText>Name of ticket 3</inlineHelpText>
        <label>Ticket 3: Ticket Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Event__Ticket_ID_Quantity_Zero__c</fullName>
        <description>Stores the comma separated ticket IDs with quantity zero.</description>
        <inlineHelpText>Stores the comma separated ticket IDs with quantity zero.</inlineHelpText>
        <label>Ticket ID Quantity Zero</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Send_To_Email_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated based on value of Campaign to which Campaign Member is linked. If true will identify records to be synced to Eloqua.</description>
        <inlineHelpText>Populated based on value of Campaign to which Campaign Member is linked. If true will identify records to be synced to Eloqua.</inlineHelpText>
        <label>Send To Email Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Assigned_Shift_Date__c</fullName>
        <label>Assigned Shift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Feedback__c</fullName>
        <description>Provide feedback on the Volunteer.</description>
        <inlineHelpText>Provide feedback on the Volunteer.</inlineHelpText>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Group_Name__c</fullName>
        <description>Specify the Group Name.</description>
        <inlineHelpText>Specify the Group Name.</inlineHelpText>
        <label>Group Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Group_Signup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify if it is a Group signup.</description>
        <inlineHelpText>Specify if it is a Group signup.</inlineHelpText>
        <label>Group Signup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Members_In_Group__c</fullName>
        <description>Specify the members in the Group for Volunteering.</description>
        <inlineHelpText>Specify the members in the Group for Volunteering.</inlineHelpText>
        <label># Members In Group</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Shift_End_Time__c</fullName>
        <label>Shift End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Shift_Start_Time__c</fullName>
        <label>Shift Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Shift_Status__c</fullName>
        <description>Specify the Shift Status of the Volunteering Member.</description>
        <inlineHelpText>Specify the Shift Status of the Volunteering Member.</inlineHelpText>
        <label>Volunteer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Indicates the number of times the Volunteer has attended Volunteering.This value rolls up to the Contact.</description>
        <inlineHelpText>Indicates the number of times the Volunteer has attended Volunteering.This value rolls up to the Contact.</inlineHelpText>
        <label>Volunteer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Indicates the number of hours the Volunteer has Volunteered.This value rolls up to the Contact.</description>
        <inlineHelpText>Indicates the number of hours the Volunteer has Volunteered.This value rolls up to the Contact.</inlineHelpText>
        <label>Volunteer Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Volunteer_Karma__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Provide credits to Volunteer for the Volunteering Karma.This value rolls up to the Contact.</description>
        <inlineHelpText>Provide credits to Volunteer  for the Volunteering Karma.This value rolls up to the Contact.</inlineHelpText>
        <label>Volunteer Karma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>rC_Event__Event_Member</fullName>
        <active>true</active>
        <description>Campaign Member is created through the events package.</description>
        <label>Event Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Volunteers__Scheduled_Volunteer</fullName>
        <active>true</active>
        <label>Volunteer Member</label>
    </recordTypes>
    <validationRules>
        <fullName>rC_Volunteers__Shift_Status_Required</fullName>
        <active>true</active>
        <description>Shift Status value is required to save a record.</description>
        <errorConditionFormula>AND($Setup.rC_Volunteers__CampaignMember_Validation__c.rC_Volunteers__Shift_Status_Required__c, Campaign.RecordType.DeveloperName = &apos;Job Shifts&apos;,
ISPICKVAL(rC_Volunteers__Shift_Status__c,&apos;&apos;) )</errorConditionFormula>
        <errorDisplayField>rC_Volunteers__Members_In_Group__c</errorDisplayField>
        <errorMessage>Required field: Shift Status</errorMessage>
    </validationRules>
</CustomObject>